tests/errors/list_type_mismatch_modulo.dang
# This should fail: mixing String and Int lists in modulo
pub result = [] % ["foo"] % [3]
